--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -1,34 +1,24 @@
-name: Render Quarto Script Daily
+name: Render Quarto Script
 
 on:
-  workflow_dispatch:  # This trigger allows manual workflow runs
   schedule:
-    - cron: '0 5 * * *'  # Runs daily at 12:00 UTC
+    - cron: '0 12 * * *'  # Runs daily at noon
 
 jobs:
-  render-qmd:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Step 2: Install Quarto
-      - name: Install Quarto
-        run: |
-          wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-amd64.deb
-          sudo dpkg -i quarto-1.3.450-linux-amd64.deb
+    - name: Install Quarto
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install quarto -y
 
-      # Step 3: Render Quarto Document
-      - name: Render Quarto Document
-        run: |
-          quarto render VALA_script.qmd --to html
+    - name: Render Quarto Document
+      run: quarto render .github/VALA_script.qmd --to html
 
-      # Step 4: Upload Rendered Output
-      - name: Upload Rendered File
-        uses: actions/upload-artifact@v3
-        with:
-          name: rendered-document
-          path: .github/VALA_script.qmd
-  # Adjust this to the rendered file's name
+    - name: Upload Rendered File
+      # Add steps to upload your rendered output file if needed
