--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -20,12 +20,16 @@ jobs:
           wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-amd64.deb
           sudo dpkg -i quarto-1.3.450-linux-amd64.deb
 
-      # Step 3: Render Quarto Document
+      # Step 3: Install rmarkdown (required for rendering)
+      - name: Install rmarkdown
+        run: R -e "install.packages('rmarkdown')"
+
+      # Step 4: Render Quarto Document
       - name: Render Quarto Document
         run: |
           quarto render .github/VALA_script.qmd --to html
 
-      # Step 4: Upload Rendered Output
+      # Step 5: Upload Rendered Output
       - name: Upload Rendered File
         uses: actions/upload-artifact@v3
         with:
