--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -20,9 +20,9 @@ jobs:
           wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-amd64.deb
           sudo dpkg -i quarto-1.3.450-linux-amd64.deb
 
-      # Step 3: Install rmarkdown (required for rendering)
+      # Step 3: Install rmarkdown in a temporary directory
       - name: Install rmarkdown
-        run: R -e "install.packages('rmarkdown')"
+        run: R -e "install.packages('rmarkdown', lib='/tmp/rmarkdown')"
 
       # Step 4: Render Quarto Document
       - name: Render Quarto Document
@@ -35,3 +35,4 @@ jobs:
         with:
           name: rendered-document
           path: VALA_script.html  # Adjust this to the rendered file's name
+
