--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -20,9 +20,11 @@ jobs:
           wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-amd64.deb
           sudo dpkg -i quarto-1.3.450-linux-amd64.deb
 
-      # Step 3: Install rmarkdown in a temporary directory
+      # Step 3: Install rmarkdown in a user-specific directory
       - name: Install rmarkdown
-        run: R -e "install.packages('rmarkdown', lib='/tmp/rmarkdown')"
+        run: |
+          export R_LIBS_USER="/tmp/rmarkdown"
+          R -e "install.packages('rmarkdown', lib='/tmp/rmarkdown')"
 
       # Step 4: Render Quarto Document
       - name: Render Quarto Document
