--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -5,6 +5,9 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+  workflow_dispatch:  # This trigger allows manual workflow runs
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily at midnight EST
 
 jobs:
   render_document:
