--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -21,10 +21,15 @@ jobs:
           wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-amd64.deb
           sudo dpkg -i quarto-1.3.450-linux-amd64.deb
 
+      - name: Create Writable R Package Directory
+        run: |
+          mkdir -p /usr/local/lib/R/site-library
+          chmod -R 777 /usr/local/lib/R/site-library
+
       - name: Install rmarkdown
         run: |
-          export R_LIBS_USER="/tmp/rmarkdown"
-          R -e "install.packages('rmarkdown', lib='/tmp/rmarkdown')"
+          export R_LIBS_USER="/usr/local/lib/R/site-library"
+          R -e "install.packages('rmarkdown', lib='$R_LIBS_USER')"
 
       - name: Render Quarto Document
         run: |
