--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -16,6 +16,11 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v2
 
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y libcurl4-openssl-dev
+
       - name: Install Quarto
         run: |
           wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-amd64.deb
