--- a/.github/workflows/render-qmd.yml
+++ b/.github/workflows/render-qmd.yml
@@ -2,16 +2,17 @@ name: Render documents and upload
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
-  workflow_dispatch:  # This trigger allows manual workflow runs
+    branches: [main, master]
+    tags: ['*']
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight EST
+  workflow_dispatch:  # This trigger allows manual workflow runs
 
 jobs:
   render_document:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
@@ -28,30 +29,34 @@ jobs:
 
       - name: Create Writable R Package Directory
         run: |
-          mkdir -p /usr/local/lib/R/site-library
-          chmod -R 777 /usr/local/lib/R/site-library
+          mkdir -p /tmp/rmarkdown
+          chmod -R 777 /tmp/rmarkdown
 
       - name: Install rmarkdown
         run: |
-          export R_LIBS_USER="/usr/local/lib/R/site-library"
+          export R_LIBS_USER="/tmp/rmarkdown"
           R -e "install.packages('rmarkdown', lib='$R_LIBS_USER')"
 
-      - name: Render Quarto Document
+      - name: Build Quarto Document
         run: |
-          quarto render .github/VALA_rmarkdown.Rmd --to html
+          quarto render .github/VALA_rmarkdown.Rmd --to pdf
 
-      - name: Commit files
+      - name: Cache icons
+        uses: actions/cache@v2
+        with:
+          path: icons
+          key: ${{ runner.os }}-${{ hashFiles('get_icons.R') }}
+
+      - name: Get icons
+        run: Rscript get_icons.R
+
+      - name: Build slides
+        run: Rscript .github/workflows/build_slides.R
+
+      - name: Deploy to Main Repository
         run: |
-          git config --local core.autocrlf false
           git config --local user.email "${{ github.actor }}@users.noreply.github.com"
           git config --local user.name "${{ github.actor }}"
-          git add . && git add --renormalize .
-          git pull origin ${{ github.head_ref }} --autostash --rebase -X ours
-          git commit --allow-empty -am "AUTO-GH ACTION: ${{ github.workflow }}"
-          NO_PAGER=1 git --no-pager diff HEAD^
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          branch: ${{ github.head_ref }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          git add .
+          git commit -m "Automated commit from GitHub Actions"
+          git push origin main
