--- a/.github/workflows/render-rmd.yml
+++ b/.github/workflows/render-rmd.yml
@@ -22,28 +22,14 @@ jobs:
           sudo apt update
           sudo apt install -y libcurl4-openssl-dev
 
-      - name: Create and configure R library directory
-        run: |
-          mkdir -p /usr/local/lib/R/site-library
-          chmod -R 755 /usr/local/lib/R/site-library
-
-      - name: Install rmarkdown
+      - name: Install R packages
         run: |
           export R_LIBS_USER="/usr/local/lib/R/site-library"
-          R -e "install.packages('rmarkdown', lib='$R_LIBS_USER')"
+          R -e "install.packages(c('rmarkdown', 'knitr', 'dplyr', 'tidyverse', 'palmerpenguins', 'quantmod', 'rugarch', 'MSGARCH', 'zoo', 'foreach', 'formattable', 'ggpubr', 'ggplot2'), lib='$R_LIBS_USER')"
 
       - name: Render .Rmd file
         run: |
           Rscript -e "rmarkdown::render('.github/VALA_rmarkdown.Rmd')"
-
-      - name: Cache icons
-        uses: actions/cache@v2
-        with:
-          path: icons
-          key: ${{ runner.os }}-${{ hashFiles('get_icons.R') }}
-
-      - name: Get icons
-        run: Rscript get_icons.R
 
       - name: Deploy to Main Repository
         run: |
