--- a/.github/workflows/render-rmd.yml
+++ b/.github/workflows/render-rmd.yml
@@ -22,6 +22,9 @@ jobs:
           sudo apt update
           sudo apt install -y libcurl4-openssl-dev
 
+      - name: Adjust directory permissions
+        run: sudo chmod -R 755 /usr/local/lib/R/site-library
+
       - name: Install R packages
         run: |
           export R_LIBS_USER="/usr/local/lib/R/site-library"
