--- a/.github/workflows/quarto-render.yml
+++ b/.github/workflows/quarto-render.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          version: latest
-          download-url: "https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.2/quarto-1.3.2-linux-amd64.deb"  # Specify version URL
+          version: "1.3.2"
 
       - name: Install R and Dependencies
         uses: r-lib/actions/setup-r@v2
