--- a/.github/workflows/quarto-render.yml
+++ b/.github/workflows/quarto-render.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          version: "1.3.2"
+          version: v1.6.42
 
       - name: Install R and Dependencies
         uses: r-lib/actions/setup-r@v2
