--- a/.github/workflows/quarto-render.yml
+++ b/.github/workflows/quarto-render.yml
@@ -1,44 +1,30 @@
-name: Render Quarto Document
-
+name: Render and Publish
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
-  workflow_dispatch:  # Allows manual triggering
+  push:
+    branches:
+      - main  # changes pushed to this branch will trigger a build.
 
 jobs:
-  render:
+  build-deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Quarto
+      - name: Check out repository
+        uses: actions/checkout@v3
+        
+      - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          version: v1.6.42
+          version: 1.3.340
 
-      - name: Install R and Dependencies
-        uses: r-lib/actions/setup-r@v2
+      - name: Render Quarto Document
+        run: |
+          quarto render ./path/to/VALA_daily.qmd  # Update with the correct file path
+
+      - name: Publish to GitHub Pages (and render)
+        uses: quarto-dev/quarto-actions/publish@v2
         with:
-          r-version: '4.3'
-
-      - name: Install Pandoc
-        run: |
-          sudo apt-get install pandoc
-
-      - name: Install R Packages
-        run: |
-          Rscript -e 'install.packages(c("quantmod", "rugarch", "MSGARCH", "zoo", "foreach", "dplyr", "tidyr", "ggplot2"))'
-
-      - name: Render Quarto document
-        run: |
-          quarto render VALA_daily.qmd
-
-      - name: Commit and Push Changes
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add .
-          git commit -m 'Automated render of VALA_daily.qmd'
-          git push
+          target: gh-pages  # Rendered HTML files will be pushed here
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Secret provided automatically by GitHub Actions
